resources/multi-arch/Route-php-apache-multiarch.yml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: php-apache-multiarch
spec:
  to:
    kind: Service
    name: php-apache-multiarch
    weight: 100
  port:
    targetPort: 80
  tls:
    termination: edge
  wildcardPolicy: None
